--- a/README
+++ b/README
@@ -18,5 +18,6 @@ Enjoy.
 Questions welcome, use github messaging.
 
 see also https://github.com/rdp/open-source-directshow-screen-capture-filter if you are looking for that or anything video related for directshow sources.
+see also https://github.com/rdp/virtual-audio-output-sniffer
 
 -r
