--- a/README
+++ b/README
@@ -11,8 +11,13 @@ It advertises and streams a single, 44100 khz "white noise" (well, randomly gene
 
 To see the code, open "virtual audio output replay.sln"
 
+to develop, you'll want to build it then run
+regsvr32 acam.ax (as administrator)
+
 For further exploration, I would recommend the directshow samples "synth" project which shows you how to setup a dynamic source, and is more complex.
 "synth" doesn't show up as an inputs device by default, but you could combine it with this project to have it do so.
+
+
 
 Enjoy.
 Questions welcome, use github messaging.
